# typhon_preset_visualizer

./: CMakeLists.txt  Info.plist  LICENSE  conanfile.txt  readme.md
Resources/: preset.proto  test.proto
include/preset_viewer/: preset_viewer.h  preset_wrapper.hpp  utilities.hpp
src/: main.cpp  preset_viewer.cpp  preset_viewer.ui  utilities.cpp
